FIXED: Closing side-nav on mobile implementation.

--- a/listnride/app/assets/stylesheets/app.css
+++ b/listnride/app/assets/stylesheets/app.css
@@ -161,6 +161,10 @@ md-card md-card-title {
   margin: 0;
 }
 
+.full-height {
+  height: 100%;
+}
+
 button.md-primary.md-cancel-button.md-button.ng-scope.md-default-theme.md-ink-ripple {
   background-color: rgb(122, 178, 248);
 }
